Add environment configuration

--- a/env/values.yaml
+++ b/env/values.yaml
@@ -12,3 +12,21 @@ cleanup:
   Annotations:
     helm.sh/hook: pre-delete
     helm.sh/hook-delete-policy: hook-succeeded
+PipelineSecrets:
+  DockerConfig: '{"auths":{"touchfierce.azurecr.io":{"auth":"dG91Y2hmaWVyY2U6dE5JdD0vNmNwbHVweWdMTWhTYzlnUHNLN1Y0K1BhazY="}}}'
+controllerbuild: {}
+expose:
+  Annotations:
+    helm.sh/hook: post-install,post-upgrade
+    helm.sh/hook-delete-policy: hook-succeeded
+  config:
+    domain: jx.carta.healthcare
+    exposer: Ingress
+    http: "true"
+jenkins:
+  Servers:
+    Global:
+      EnvVars:
+        DOCKER_REGISTRY: touchfierce.azurecr.io
+        TILLER_NAMESPACE: kube-system
+prow: {}
